# Disk-Usage-Viewer

./: .gitignore  CMakeLists.txt  README.md  settings.json
UML/: FilesystemTreeWidgetVariant_D20200326.uxf  FilesystemTreeWidget_D20200326.uxf
resources/: settings.json  settings2.json
src/UI/: Application.cpp  Application.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp  main.ui  ui_main.hpp
src/core/: config.hpp
src/modules/: CMakeLists.txt
src/modules/DiskUsage/: CMakeLists.txt  Interface.hpp  Module.cpp  Module.hpp
src/modules/DiskUsage/UI/: FilesystemItem.cpp  FilesystemItem.hpp  FilesystemModel.cpp  FilesystemModel.hpp  MainWidget.cpp
src/modules/DiskUsage/core/: Filesystem.cpp  Filesystem.hpp  FilesystemSignal.cpp  FilesystemSignal.hpp  FilesystemSignalApple.cpp  FilesystemSignalApple.hpp  FilesystemSignalBase.hpp  FilesystemSignalPosix.cpp  FilesystemSignalPosix.hpp  FilesystemSignalWin.cpp  FilesystemSignalWin.hpp  config.hpp
src/modules/FileTreePane/: CMakeLists.txt  Interface.hpp  Module.cpp  Module.hpp
src/modules/FileTreePane/UI/: MainWidget.hpp  WidgetItemDelegate.cpp  WidgetItemDelegate.hpp  WidgetModel.cpp  WidgetModel.hpp
src/modules/FileTreePane/core/: config.hpp
src/modules/FilesystemDatabase/: CMakeLists.txt  Interface.hpp  Module.cpp  Module.hpp  Module.hpp.autosave
src/modules/FilesystemDatabase/core/: Filesystem.cpp  Filesystem.hpp  FilesystemFileTable.hpp  FilesystemFileTableData.hpp  FilesystemSignalApple.hpp  FilesystemSignalBase.hpp  FilesystemSignalPosix.cpp  FilesystemSignalPosix.hpp  FilesystemSignalWin.cpp  FilesystemSignalWin.hpp  config.hpp
